--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,9 @@
 .DS_Store
 *.pem
 
+# database
+prisma/*.db
+
 # debug
 npm-debug.log*
 yarn-debug.log*
@@ -32,6 +35,9 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+
+# temporary backups
+*.bak
 
 # vercel
 .vercel
