--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@prisma/client": "^7.2.0",
     "bcryptjs": "^3.0.3",
     "better-sqlite3": "^12.5.0",
+    "lucide-react": "^0.562.0",
     "next": "16.0.10",
     "prisma": "^7.2.0",
     "react": "19.2.1",
