--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "next": "16.0.10",
     "prisma": "^7.2.0",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
