--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "prisma": "^7.2.0",
     "react": "19.2.1",
     "react-dom": "19.2.1",
-    "recharts": "^3.6.0"
+    "recharts": "^3.6.0",
+    "resend": "^6.7.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
