--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "recharts": "^3.6.0",
-    "resend": "^6.7.0"
+    "resend": "^6.7.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
